<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginsignupforgot.UpdateProfile"
    android:focusedByDefault="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp120"
        android:background="@drawable/topbackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="@dimen/dp50"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ic_back"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="start"
                android:src="@drawable/ic_back"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="61dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/topbackground"
                android:gravity="center"
                android:paddingRight="@dimen/dp24"
                android:text="@string/edit_profile"
                android:textColor="@color/white"
                android:textSize="@dimen/sp20"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="57dp"
                tools:layout_editor_absoluteY="60dp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:id="@+id/linearLayout4"
                        android:layout_width="match_parent"
                        android:layout_margin="@dimen/dp16"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/profilePic"
                            android:layout_width="@dimen/dp120"
                            android:layout_height="@dimen/dp120"
                            android:src="@drawable/ic_human" />

                        <LinearLayout
                            android:id="@+id/layoutupdate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp8"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="@dimen/dp30"
                                android:layout_height="@dimen/dp30"
                                android:layout_weight=".2"
                                android:src="@drawable/ic_edit"/>

                            <TextView
                                android:layout_marginLeft="@dimen/dp8"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/edit_photo"
                                android:textColor="@color/black"
                                android:textSize="@dimen/sp16"
                                android:textStyle="bold" />


                        </LinearLayout>

                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/profile_name">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:textSize="@dimen/sp16" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp8"
                        android:hint="@string/cnic_number">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtcnic"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:textSize="@dimen/sp16" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp8"

                        android:hint="@string/enter_number">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtnumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:textSize="@dimen/sp16" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp8"
                        android:hint="@string/confirm_password"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtpassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:textSize="@dimen/sp16" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp8"
                        android:hint="@string/district">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtDistrict"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:textSize="@dimen/sp16" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <TextView
                        android:id="@+id/btnUpdate"
                        android:layout_width="220dp"
                        android:layout_height="@dimen/dp50"
                        android:layout_marginStart="32dp"
                        android:layout_marginLeft="32dp"
                        android:layout_marginTop="@dimen/dp24"
                        android:layout_marginEnd="32dp"
                        android:layout_marginRight="32dp"
                        android:layout_marginBottom="@dimen/dp16"
                        android:background="@drawable/btnborder"
                        android:gravity="center"
                        android:text="@string/update"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp18"
                        android:textStyle="bold" />

                </LinearLayout>
            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>