<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".businesslicense.Personal_Detail">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp100"
                android:background="@drawable/topbackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="32dp"
                    android:layout_marginLeft="32dp"
                    android:gravity="center_vertical"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/ic_back"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_back"
                        tools:layout_editor_absoluteX="16dp"
                        tools:layout_editor_absoluteY="61dp" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/topbackground"
                        android:gravity="center"
                        android:paddingRight="@dimen/dp24"
                        android:text="@string/business_registration"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp20"
                        android:textStyle="bold"
                        tools:layout_editor_absoluteX="57dp"
                        tools:layout_editor_absoluteY="60dp" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp16"
                android:text="Owner Detail"
                android:textColor="@color/black"
                android:textSize="@dimen/sp16"
                android:textStyle="bold"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp16"
                android:gravity="center">
                <TextView
                    android:layout_width="@dimen/dp40"
                    android:layout_height="@dimen/dp40"
                    android:text="1"
                    android:gravity="center"
                    android:textSize="@dimen/sp18"
                    android:background="@drawable/active_progress"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
                <View
                    android:layout_width="@dimen/dp30"
                    android:layout_height="@dimen/dp2"
                    android:background="@color/lightbrown"/>
                <TextView
                    android:layout_width="@dimen/dp40"
                    android:layout_height="@dimen/dp40"
                    android:text="2"
                    android:gravity="center"
                    android:textSize="@dimen/sp18"
                    android:background="@drawable/inactive_progress"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
                <View
                    android:layout_width="@dimen/dp30"
                    android:layout_height="@dimen/dp2"
                    android:background="@color/lightbrown"/>
                <TextView
                    android:layout_width="@dimen/dp40"
                    android:layout_height="@dimen/dp40"
                    android:text="3"
                    android:gravity="center"
                    android:textSize="@dimen/sp18"
                    android:background="@drawable/inactive_progress"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginRight="@dimen/dp24"
                android:layout_marginTop="@dimen/dp16"
                android:text="Afghan Citizen"
                android:textSize="@dimen/sp16" />

            <!--cnic number-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp24"
                android:layout_marginRight="@dimen/dp24"
                android:orientation="horizontal"
                android:gravity="center">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cnic_number_without_dashes">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtcnic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:digits="0123456789"
                        android:textSize="@dimen/sp16" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <!--name-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:layout_marginTop="@dimen/dp16"
                android:layout_marginLeft="@dimen/dp24"
                android:layout_marginRight="@dimen/dp24"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="@dimen/sp16" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--father name-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp24"
                android:layout_marginRight="@dimen/dp24"
                android:layout_marginTop="@dimen/dp16"
                android:hint="@string/father_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtfathername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="@dimen/sp16" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--contact number-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp24"
                android:layout_marginRight="@dimen/dp24"
                android:layout_marginTop="@dimen/dp16"
                android:hint="@string/contact_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtcontact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textSize="@dimen/sp16" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/btnNext"
                android:layout_width="220dp"
                android:layout_height="@dimen/dp50"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="@dimen/dp24"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/btnborder"
                android:gravity="center"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="@dimen/sp18"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>